package com.belleileperfumee.belle_ile_parfumee.entity;

public enum OrderStatus {
    PENDING,
    COMPLETED,
    CANCELLED
}
